--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "author": "Branimir Bzenic",
   "license": "P1",
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "*",
-    "babelify": "*",
+    "babelify": "^10.0.0",
     "browserify": "*",
     "del": "*",
     "gulp": "*",
@@ -27,7 +32,19 @@
     "karma": "*",
     "karma-chrome-launcher": "*",
     "karma-jasmine": "*",
-    "vinyl-buffer": "*"
+    "vinyl-buffer": "*",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env"
+    ]
+  }
+ 
 }
