--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browserify": "*",
     "del": "*",
     "gulp": "*",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "*",
     "gulp-concat": "*",
     "gulp-less": "^3.1.0",
