--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "babelify": "^10.0.0",
     "browserify": "*",
     "del": "*",
-    "gulp": "*",
+    "gulp": "^3.9.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "*",
     "gulp-concat": "*",
+    "gulp-install": "^1.1.0",
     "gulp-less": "^3.1.0",
     "gulp-plumber": "*",
     "gulp-sourcemaps": "*",
